[package]
name = "stand-timer"
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE.txt"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive"] }
crossterm = "0.29.0"
notify-rust = "4.11.7"
ratatui = "0.29.0"
strum = "0.27.2"
strum_macros = "0.27.2"
tui-big-text = "0.7.1"
