[package]
name = "stand-timer"
description = "Timer to remind when to sit and stand while working."
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/s7rul/stand-timer"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["timer", "sit", "stand", "tui"]

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive"] }
crossterm = "0.29.0"
notify-rust = "4.11.7"
ratatui = "0.29.0"
strum = "0.27.2"
strum_macros = "0.27.2"
tui-big-text = "0.7.1"
