[package]
name = "stand-timer"
description = "Timer to remind when to sit and stand while working."
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/s7rul/stand-timer"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["timer", "sit", "stand", "tui"]

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
notify-rust = "4.11"
ratatui = "0.29"
strum = "0.27"
strum_macros = "0.27"
tui-big-text = "0.7"
